[project]
name = "vibecoded-agent-2"
version = "0.1.0"
description = "A Gemini-based agent that uses yfinance to compare stock prices day-by-day."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"google-genai>=0.12.0",
	"python-dotenv>=1.0.1",
	"yfinance>=0.2.28",
	"pandas>=1.5.0",
]

[tool.setuptools]
packages = ["vibecoded_agent_2"]
